--- a/package.json
+++ b/package.json
@@ -45,7 +45,8 @@
   },
   "overrides": {
     "react": "17.0.2",
-    "react-native": "0.64.2"
+    "react-native": "0.64.2",
+    "@xmldom/xmldom": "0.8.3"
   },
   "resolutions": {
     "react": "17.0.2",
